# Crocoone

./: LICENSE  README.md
hardware/interface_board/: PCB_interface_board.json  SCH_interface_board.json
hardware/main_board/: PCB_main_board.json  SCH_main_board.json
software/ESP32/crocoone/: CMakeLists.txt  sdkconfig
software/ESP32/crocoone/main/: CMakeLists.txt  at_command.c  at_command.h  attack_beacon.c  attack_beacon.h  attack_deauth.c  attack_deauth.h  attack_handshake.c  attack_handshake.h  attack_pmkid.c  attack_pmkid.h  attacks.c  attacks.h  data_converter.c  data_converter.h  frame_analyzer.c  frame_analyzer.h  frame_analyzer_parser.c  frame_analyzer_parser.h  hc22000_converter.c  hc22000_converter.h  hccapx_serializer.c  main.c  packet_monitor.c  packet_monitor.h  packet_sender.c  packet_sender.h  pcap_serializer.c  pcap_serializer.h  scanner.c  scanner.h  sniffer.c  sniffer.h  tasks_mannager.c  tasks_mannager.h  uart_control.c  uart_control.h  wifi_control.c  wifi_control.h
software/STM32/CROCOONE_H743_BOARD/: .cproject  .mxproject  .project  CROCOONE_H743_BOARD.hex  CROCOONE_H743_BOARD.ioc  STM32H743VITX_FLASH.ld
software/STM32/CROCOONE_H743_BOARD/ADT/: adt_hashmap.c  adt_hashmap.h  adt_list.c  adt_list.h  adt_ringBuffer.c  string_functions.c  string_functions.h
software/STM32/CROCOONE_H743_BOARD/AT24Cxx_eeprom/: eeprom.c
software/STM32/CROCOONE_H743_BOARD/Debug/: CROCOONE_H743_BOARD.hex
software/STM32/CROCOONE_H743_BOARD/SD_card/: SD_card.c
software/STM32/CROCOONE_H750/: .cproject  .mxproject  .project  CROCOONE_H750.hex  CROCOONE_H750.ioc
(+107 files in other folders)
